# src/routes/urlRoute.js
@@ -6,7 +6,7 @@ import { ensureAuthenticated } from '../middlewares/auth.middleware.js';
 
 const router = express.Router();
 
-router.post('/shorten', ensureAuthenticated, validateURLRequest, createRateLimiter, createShortURL);
+router.post('/shortURL', ensureAuthenticated, validateURLRequest, createRateLimiter, createShortURL);
 router.get('/:alias', redirectShortURL);
 
 export default router;
